# SpaceShooter

./: README.md  compile_linux.sh  compile_linux_clang.sh
old/: CMakeLists.txt  lColor.cpp  lColor.h  main.cpp  old.kdev4
old/.kdev4/: old.kdev4
old/Content/Game/: Ships  Weapons
old/Content/Game/Maps/TestMap/: Map.map
old/Content/Game/Script/Maps/TestMap/: Script.lua
old/Map/JRPG/: Map.map
old/Map/TestMap/: Map.map  MapData.data
old/Map/TowerDefense/: Map.map
old/Script/: lGame.lua
old/lGame/: lCollision.cpp  lCollision.h  lGame.h  lMenu.cpp  lMenu.h  lRay.cpp  lRay.h  lRect.cpp  lRect.h  lSSGameData.h  lwVerticalMenu.h
old/lGame/lHangar/: lHangar.cpp  lHangar.h  lSolarSystemMap.cpp  lSolarSystemMap.h  lStore.cpp  lStore.h
old/lGame/lMainMenu/: lMainMenu.cpp  lMainMenu.h
old/lGame/lSpaceShooter/: lAgent.cpp  lAgent.h  lEnemy.cpp  lEnemy.h  lHUD.cpp  lHUD.h  lMap.cpp  lMap.h  lObject.cpp  lObject.h  lPlayer.cpp  lPlayer.h  lProjectile.cpp  lProjectile.h  lSS_LuaInterface.cpp  lSS_LuaInterface.h  lShip.cpp  lShip.h  lShipDatabase.h  lSpaceShooter.h
old/lGameModes/: lprotoCollisionCallback.h  lprotoGameMode.h  lprotoMap.cpp  lprotoMap.h  lprotoObject.cpp  lprotoObject.h
old/lGameModes/lGM_Agents/: lGM_BulletFactory.h  lGM_Character.h  lGM_Entity.cpp  lGM_Entity.h  lGM_Fighter.cpp  lGM_Fighter.h  lGM_Projectile.h  lGM_Sensor.h
old/lGameModes/lGM_Agents/AI/: lGM_AI.cpp  lGM_AI.h
old/lGameModes/lGM_Agents/AI/lGM_AICommand/: lGM_AICommand.cpp  lGM_AICommand.h  lGM_AICommand_Goto.cpp  lGM_AICommand_Goto.h
old/lGameModes/lGame/: lEvent.h  lSoundSource.cpp  lSoundSource.h  lTimer.cpp  lTimer.h  liAgent.h  liSoundSource.h  liTimer.h
old/lGameModes/lJRPG/: lJRPG.h  lJRPG_Companion.h  lJRPG_Enemy.h  lJRPG_Hero.h  lJRPG_Player.h
old/lGameModes/lTD/: lTD.h  lTD_Base.h
old/lInterface/: lFrameLimiter.cpp  lFrameLimiter.h  lInput.h  liSound.h
old/lInterface/lSDL2Interface/: lSDL2FrameLimiter.h  lSDL2Input.cpp  lSDL2Input.h  lSDL2SoundManager.cpp  lSDL2SoundManager.h  lSDLInit.cpp  lSDLInit.h
old/lMath/: lMath.cpp  lMath.h  lmGeometry2D.cpp  lmGeometry2D.h  lmTypedef.h  lmVector2D.cpp  lmVector2D.h
old/lResourceManager/: BMP.cpp  BMP.h  Int.cpp  Int.h  RM.cpp  RM.h  Wave.cpp  Wave.h  liWave.h  loadTexture.cpp  loadTexture.h
